--- a/diptyque-collection.html
+++ b/diptyque-collection.html
@@ -1,39 +1,31 @@
-
 <!DOCTYPE html>
 <html>
 <head>
  <meta charset="UTF-8">
  <title>Diptyque - Collections</title>
-
-<style>
-body {
- font-family: "Times New Roman", serif;
- background-color: white;
- text-align: center;
-}
-p {
- width: 70%;
- margin: auto;
- font-size: 17px;
- line-height: 1.4;
-}
-img {
- width: 250px;
- margin-top: 15px;
-}
-</style>
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
  
  <h2>Diptyque Collection Highlight</h2>
- 
- <p>Tam Dao eau de parfum – Inspired by temple sandalwood carried from Vietnamese forests.</p>
 
- <img src="images/tamdao.avif">
+<div class="ad-wrapper">
+  <div class="ad-left">
+   <img src="images/ad.webp" alt="Ad Left">
+  </div>
 
- <br>
- <a href="diptyque.html">Return</a>
+  <div class="ad-center">
+   <p>Tam Dao eau de parfum – Inspired by temple sandalwood carried from Vietnamese forests.</p>
+   <img src="images/tamdao.avif">
+
+   <p><a href="fragrance.html">Return</a></p>
+  </div>
+
+  <div class="ad-right">
+   <img src="images/ad.webp" alt="Ad Right">
+  </div>
+</div>
 
 </body>
 </html>
