--- a/diptyque.html
+++ b/diptyque.html
@@ -1,43 +1,45 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
  <meta charset="UTF-8">
  <title>Diptyque</title>
-
- <style>
-body {
- font-family: "Times New Roman", serif;
- background-color: white;
- text-align: center;
-}
-p {
- width: 70%;
- margin: auto;
- font-size: 17px;
- line-height: 1.4;
-}
-img {
- width: 250px;
- margin-top: 15px;
-}
-</style>
-
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
- <a href="diptyque.html">
+ <a href="fragrance.html">
   <img src="images/diptyque-logo.png" width="120">
  </a>
  
  <h2>Diptyque</h2>
+
+ <div class="menu">
+  <a href="diptyque-gift.html">Gifts</a>
+  <a href="diptyque-collection.html">Collections</a>
+  <a href="diptyque-bestseller.html">Bestsellers</a>
+ </div>
  
- <p>
-  <a href="diptyque-gift.html">Gifts</a><br>
-  <a href="diptyque-collection.html">Collections</a><br>
-  <a href="diptyque-bestseller.html">Bestsellers</a><br>
- </p>
+ <div class="ad-wrapper">
+  <div class="ad-left">
+   <img src="images/ad.webp" alt="Ad Left">
+  </div>
 
+  <div class="ad-center">
+   <div class="video-wrapper">
+    <video controls>
+     <source src="video/tamdao.mp4" type="video/mp4" width="300">
+    </video>
+   <p><a href="fragrance.html">Return</a></p>
+   </div>
+  </div>
 
+  <div class="ad-right">
+   <img src="images/ad.webp" alt="Ad Right">
+  </div>
+ </div>
+ 
 </body>
 </html>
