--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <html>
 <head>
  <meta charset="UTF-8">
- <title>Diptyque - Bestsellers</title>
+ <title>Fragrance</title>
  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+ <a href="fragrance.html">
+  <img src="images/logo.jpg" width="120">
+ </a>
  
- <h2>Diptyque Bestseller Highlight</h2>
+ <h2>Welcome to my Fragrance Website</h2>
  
+ <div class="menu">
+  <a href="diptyque.html">Diptyque</a>
+  <a href="jom.html">Jo Malone</a>
+  <a href="ysl.html">Yves Saint Laurent</a>
+ </div>
+
  <div class="ad-wrapper">
   <div class="ad-left">
    <img src="images/ad.webp" alt="Ad Left">
   </div>
 
   <div class="ad-center">
-   <p>Philosykos eau de parfum – Radiant freshness of figs under Greek sun.</p>
-   <img src="images/philosykos.avif">
-
+   <img src="images/homepage.webp" width="120">
    <p><a href="fragrance.html">Return</a></p>
   </div>
 
@@ -27,6 +35,6 @@
    <img src="images/ad.webp" alt="Ad Right">
   </div>
  </div>
- 
+
 </body>
 </html>
