--- a/jom-gift.html
+++ b/jom-gift.html
@@ -1,38 +1,31 @@
+
 <!DOCTYPE html>
 <html>
 <head>
  <meta charset="UTF-8">
  <title>Jo Malone - Gifts</title>
-
-<style>
-body {
- font-family: "Times New Roman", serif;
- background-color: white;
- text-align: center;
-}
-p {
- width: 70%;
- margin: auto;
- font-size: 17px;
- line-height: 1.4;
-}
-img {
- width: 250px;
- margin-top: 15px;
-}
-</style>
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
- 
- <h2>Jo Malone Gift Highlight</h2>
- 
- <p>English Pear & Freesia Cologne – A blend of ripe pear and delicate floral notes.</p>
 
- <img src="images/jom-pear.webp">
- 
- <br>
- <a href="jom.html">Return</a>
+ <div class="ad-wrapper">
+  <div class="ad-left">
+   <img src="images/ad.webp">
+  </div>
+
+  <div class="ad-center">  
+   <h2>Jo Malone Gift Highlight</h2>
+   <p>English Pear & Freesia Cologne – A blend of ripe pear and delicate floral notes.</p>
+   <img src="images/jom-pear.webp">   
+
+   <p><a href="jom.html">Return</a></p>
+  </div>
+
+  <div class="ad-right">
+   <img src="images/ad.webp">
+  </div>
+ </div>
 
 </body>
 </html>
