--- a/jom.html
+++ b/jom.html
@@ -3,41 +3,37 @@
 <head>
  <meta charset="UTF-8">
  <title>Jo Malone</title>
-
- <style>
-body {
- font-family: "Times New Roman", serif;
- background-color: white;
- text-align: center;
-}
-p {
- width: 70%;
- margin: auto;
- font-size: 17px;
- line-height: 1.4;
-}
-img {
- width: 250px;
- margin-top: 15px;
-}
-</style>
-
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
- <a href="jom.html">
-  <img src="images/jom-logo.png" width="120">
+ <a href="fragrance.html">
+  <img src="images/jom-logo.png">
  </a>
  
  <h2>Jo Malone</h2>
  
- <p>
-  <a href="jom-gift.html">Gifts</a><br>
-  <a href="jom-collection.html">Collections</a><br>
-  <a href="jom-bestseller.html">Bestsellers</a><br>
- </p>
+ <div class="menu">
+  <a href="jom-gift.html">Gifts</a>
+  <a href="jom-collection.html">Collections</a>
+  <a href="jom-bestseller.html">Bestsellers</a>
+ </div>
+ 
+ <div class="ad-wrapper">
+  <div class="ad-left">
+   <img src="images/ad.webp" alt="Ad Left">
+  </div>
 
+  <div class="ad-center">
+   <img src="images/jom-xmas.avif">
+   <p><a href="fragrance.html">Return</a></p>
+  </div>
+
+  <div class="ad-right">
+   <img src="images/ad.webp" alt="Ad Right">
+  </div>
+ </div>
 
 </body>
 </html>
