--- a/ysl.html
+++ b/ysl.html
@@ -1,23 +1,45 @@
+
 <!DOCTYPE html>
 <html>
 <head>
  <meta charset="UTF-8">
  <title>Yves Saint Laurent</title>
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
- <a href="ysl.html">
-  <img src="images/logo.jpg" width="120">
+ 
+ <a href="fragrance.html">
+  <img src="images/ysl-logo.png" width="120">
  </a>
  
  <h2>Yves Saint Laurent</h2>
 
- <p>
-  <a href="ysl-gift.html">Gifts</a><br>
-  <a href="ysl-collection.html">Collections</a><br>
-  <a href="ysl-bestseller.html">Bestsellers</a><br>
- </p>
+ <div class="menu">
+  <a href="ysl-gift.html">Gifts</a>
+  <a href="ysl-collection.html">Collections</a>
+  <a href="ysl-bestseller.html">Bestsellers</a>
+ </div>
+ 
+ <div class="ad-wrapper">
+  <div class="ad-left">
+   <img src="images/ad.webp" alt="Ad Left">
+  </div>
 
-</head>
+  <div class="ad-center">
+   <div class="video-wrapper">
+    <video controls>
+     <source src="video/ysl.mp4" type="video/mp4">
+    </video>
+   <p><a href="fragrance.html">Return</a></p>
+   </div>
+  </div>
+
+  <div class="ad-right">
+   <img src="images/ad.webp" alt="Ad Right">
+  </div>
+ </div>
+
+
 </body>
+</html>
