--- a/jom-collection.html
+++ b/jom-collection.html
@@ -3,36 +3,31 @@
 <head>
  <meta charset="UTF-8">
  <title>Jo Malone - Collections</title>
-
-<style>
-body {
- font-family: "Times New Roman", serif;
- background-color: white;
- text-align: center;
-}
-p {
- width: 70%;
- margin: auto;
- font-size: 17px;
- line-height: 1.4;
-}
-img {
- width: 250px;
- margin-top: 15px;
-}
-</style>
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
  
- <h2>Jo Malone Collection Highlight</h2>
  
- <p>Wood Sage & Sea Salt – Mineral notes inspired by sea breeze and driftwood.</p>
 
- <img src="images/jom-wood.avif">
- 
- <br>
- <a href="jom.html">Return</a>
+ <div class="ad-wrapper">
+  <div class="ad-left">
+   <img src="images/ad.webp">
+  </div>
+
+  <div class="ad-center">  
+   <h2>Jo Malone Collection Highlight</h2>   
+   <p>Wood Sage & Sea Salt – Mineral notes inspired by sea breeze and driftwood.</p>
+   <img src="images/jom-wood.avif">   
+
+   <p><a href="jom.html">Return</a></p>
+  </div>
+
+  <div class="ad-right">
+   <img src="images/ad.webp">
+  </div>
+ </div>
+
 
 </body>
 </html>
