--- a/ysl-bestseller.html
+++ b/ysl-bestseller.html
@@ -1,14 +1,13 @@
+
 <!DOCTYPE html>
 <html>
 <head>
  <meta charset="UTF-8">
- <title>Jo Malone - Bestsellers</title>
+ <title>Yves Saint Laurent - Bestsellers</title>
  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
- 
- 
 
  <div class="ad-wrapper">
   <div class="ad-left">
@@ -16,18 +15,16 @@
   </div>
 
   <div class="ad-center">  
-   <h2>Jo Malone Bestseller Highlight</h2>   
-   <p>Peony & Blush Suede – A floral fragrance evoking soft petals and suede.</p>
-   <img src="images/jom-peony.avif">   
-
-   <p><a href="jom.html">Return</a></p>
+   <h2>Yves Saint Laurent Bestseller Highlight</h2>
+   <p>Mon Paris – Modern fruity floral fragrance inspired by Parisian romance.</p>
+   <img src="images/ysl-monparis.webp"> 
+   <p><a href="ysl.html">Return</a></p>
   </div>
 
   <div class="ad-right">
    <img src="images/ad.webp">
   </div>
  </div>
-
 
 </body>
 </html>
