--- a/ysl-gift.html
+++ b/ysl-gift.html
@@ -1,33 +1,30 @@
+
 <!DOCTYPE html>
 <html>
 <head>
  <meta charset="UTF-8">
- <title>Jo Malone - Bestsellers</title>
+ <title>Yves Saint Laurent - Gifts</title>
  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
  
- 
-
  <div class="ad-wrapper">
   <div class="ad-left">
    <img src="images/ad.webp">
   </div>
 
   <div class="ad-center">  
-   <h2>Jo Malone Bestseller Highlight</h2>   
-   <p>Peony & Blush Suede – A floral fragrance evoking soft petals and suede.</p>
-   <img src="images/jom-peony.avif">   
-
-   <p><a href="jom.html">Return</a></p>
+   <h2>Yves Saint Laurent Gift Highlight</h2>
+   <p>Libre Eau de Parfum – Lavender essence blended with musk and orange blossom.</p>
+   <img src="images/ysl-libre.webp">   
+   <p><a href="ysl.html">Return</a></p>
   </div>
 
   <div class="ad-right">
    <img src="images/ad.webp">
   </div>
  </div>
-
 
 </body>
 </html>
