Fix HTML structure and update return link

--- a/diptyque-bestseller.html
+++ b/diptyque-bestseller.html
@@ -20,7 +20,7 @@
    <p>Philosykos eau de parfum – Radiant freshness of figs under Greek sun.</p>
    <img src="images/philosykos.avif">
 
-   <p><a href="fragrance.html">Return</a></p>
+   <p><a href="index.html">Return</a></p>
   </div>
 
   <div class="ad-right">
@@ -29,4 +29,5 @@
  </div>
  
 </body>
+
 </html>
