Format diptyque.html with proper HTML structure

--- a/diptyque.html
+++ b/diptyque.html
@@ -33,7 +33,7 @@
     <video controls>
      <source src="video/tamdao.mp4" type="video/mp4" width="300">
     </video>
-   <p><a href="fragrance.html">Return</a></p>
+   <p><a href="index.html">Return</a></p>
    </div>
   </div>
 
@@ -44,3 +44,4 @@
  
 </body>
 </html>
+
