--- a/diptyque-collection.html
+++ b/diptyque-collection.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,7 +20,7 @@
    <p>Tam Dao eau de parfum – Inspired by temple sandalwood carried from Vietnamese forests.</p>
    <img src="images/tamdao.avif">
 
-   <p><a href="fragrance.html">Return</a></p>
+   <p><a href="index.html">Return</a></p>
   </div>
 
   <div class="ad-right">
