--- a/fragrance.html
+++ b/fragrance.html
@@ -1,27 +1,11 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
  <meta charset="UTF-8">
- <title>Diptyque</title>
-
- <style>
- body {
- font-family: "Times New Roman", serif;
- background-color: white;
- text-align: center;
-}
-p {
- width: 70%;
- margin: auto;
- font-size: 17px;
- line-height: 1.4;
-}
-img {
- width: 120px;
- margin-top: 15px;
-}
-</style>
-
+ <title>Fragrance</title>
+ <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -32,11 +16,26 @@ img {
  
  <h2>Welcome to my Fragrance Website</h2>
  
- <p>
-  <a href="diptyque.html">Diptyque</a><br>
-  <a href="jom.html">Jo Malone</a><br>
-  <a href="ysl.html">Yves Saint Laurent</a><br>
- </p>
+ <div class="menu">
+  <a href="diptyque.html">Diptyque</a>
+  <a href="jom.html">Jo Malone</a>
+  <a href="ysl.html">Yves Saint Laurent</a>
+ </div>
+
+ <div class="ad-wrapper">
+  <div class="ad-left">
+   <img src="images/ad.webp" alt="Ad Left">
+  </div>
+
+  <div class="ad-center">
+   <img src="images/homepage.webp" width="120">
+   <p><a href="fragrance.html">Return</a></p>
+  </div>
+
+  <div class="ad-right">
+   <img src="images/ad.webp" alt="Ad Right">
+  </div>
+ </div>
 
 </body>
 </html>
