--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
- <a href="fragrance.html">
+ <a href="index.html">
   <img src="images/logo.jpg" width="120">
  </a>
  
@@ -28,7 +28,7 @@
 
   <div class="ad-center">
    <img src="images/homepage.webp" width="120">
-   <p><a href="fragrance.html">Return</a></p>
+   <p><a href="index.html">Return</a></p>
   </div>
 
   <div class="ad-right">
@@ -38,3 +38,4 @@
 
 </body>
 </html>
+
