--- a/fragrance.html
+++ b/fragrance.html
@@ -10,7 +10,7 @@
 
 <body>
 
- <a href="fragrance.html">
+ <a href="index.html">
   <img src="images/logo.jpg" width="120">
  </a>
  
@@ -39,4 +39,5 @@
 
 </body>
 </html>
+
 
