--- a/index.html
+++ b/index.html
@@ -8,10 +8,46 @@
 </head>
 
 <body>
+ 
+<nav class="navbar">
+ <div class="navbar-left">
+  <a href="index.html" class="logo">
+   <img src="images/logo.jpg" alt="Logo">
+   <span>Fragrance</span>
+  </a>
+ </div>
 
- <a href="index.html">
-  <img src="images/logo.jpg" width="120">
- </a>
+ <ul class="navbar-right">
+  <li class="dropdown">
+   <a href="diptyque.html">Diptyque</a>
+    <ul class="dropdown-content">
+      <li><a href="diptyque-gift.html">Gift</a></li>
+      <li><a href="diptyque-collection.html">Collection</a></li>
+      <li><a href="diptyque-bestseller.html">Bestseller</a></li>
+    </ul>
+  </li>
+  <li class="dropdown">
+    <a href="jom.html">Jo Malone</a>
+    <ul class="dropdown-content">
+      <li><a href="jom-gift.html">Gift</a></li>
+      <li><a href="jom-collection.html">Collection</a></li>
+      <li><a href="jom-bestseller.html">Bestseller</a></li>
+    </ul>
+  </li>
+  <li class="dropdown">
+    <a href="ysl.html">Yves Saint Laurent</a>
+    <ul class="dropdown-content">
+      <li><a href="ysl-gift.html">Gift</a></li>
+      <li><a href="ysl-collection.html">Collection</a></li>
+      <li><a href="ysl-bestseller.html">Bestseller</a></li>
+    </ul>
+  </li>
+ </ul>
+</nav>
+
+<a href="index.html">
+ <img src="images/logo.jpg" width="120">
+</a>
  
  <h2>Welcome to my Fragrance Website</h2>
  
@@ -38,4 +74,5 @@
 
 </body>
 </html>
+
 
