--- a/diptyque.html
+++ b/diptyque.html
@@ -11,7 +11,7 @@
 
 <body>
 
- <a href="fragrance.html">
+ <a href="index.html">
   <img src="images/diptyque-logo.png" width="120">
  </a>
  
@@ -44,4 +44,5 @@
  
 </body>
 </html>
+
 
