--- a/jom.html
+++ b/jom.html
@@ -8,7 +8,7 @@
 
 <body>
 
- <a href="fragrance.html">
+ <a href="index.html">
   <img src="images/jom-logo.png">
  </a>
  
@@ -27,7 +27,7 @@
 
   <div class="ad-center">
    <img src="images/jom-xmas.avif">
-   <p><a href="fragrance.html">Return</a></p>
+   <p><a href="index.html">Return</a></p>
   </div>
 
   <div class="ad-right">
@@ -36,4 +36,5 @@
  </div>
 
 </body>
+
 </html>
